# boolean_bayesian_networks

./: .gitignore  Makefile  README.md  a01_compile_bool_nets.py  a02_transition_nets.py  config.py  main.py  pyproject.toml  run_bnfinder_analysis.sh
analysis/: analysis_report_7d_000.csv  analyze_bnf_results.py  analyze_single.py  bif_parser.py  plotting.py  summary_notebook.ipynb  utils.py  visualize_results.py  visualize_single.py
analysis/reconstructed_functions/: 10d_000_async_F1_functions.py  10d_000_async_Transition_Accuracy_functions.py  10d_000_sync_F1_functions.py  10d_000_sync_Transition_Accuracy_functions.py  10d_001_async_F1_functions.py  10d_001_async_Transition_Accuracy_functions.py  10d_001_sync_F1_functions.py  10d_001_sync_Transition_Accuracy_functions.py  10d_002_async_F1_functions.py  10d_002_async_Transition_Accuracy_functions.py  10d_002_sync_F1_functions.py  10d_002_sync_Transition_Accuracy_functions.py  10d_003_async_F1_functions.py  10d_003_async_Transition_Accuracy_functions.py  (+46 more)
biodivine_importer/: __init__.py  convert_to_functions.py  count_inputs.py  importer.py  organize_by_dimension.py
bnfinder/: Dockerfile  requirements.txt
boolean_networks/: __init__.py  cli.py
raport/: main.tex  sketch.tex
report/: main.tex
scc_analysis/: __init__.py  analyze_biodivine.py  scc_analyzer.py  scc_visualizer.py
tests/: test_truth_table_consistency.py
trajectory_generation/: a03_identify_attractors.py  a04_alternative.py  a04_create_trajectory.py  a05_run_bnfinder.py  config.py  log.txt  log_20_01.txt  log_21_01.txt  main.py  main_parallel.py
(+8259 files in other folders)
